fix dark mode color

--- a/U3A/wwwroot/css/theme-fluent.css
+++ b/U3A/wwwroot/css/theme-fluent.css
@@ -1,4 +1,7 @@
-﻿.text-fl-primary {
+﻿.text-fl-body {
+    color: var(--DS-color-content-neutral-default-rest) !important;
+}
+.text-fl-primary {
     color: var(--DS-color-content-primary-default-rest) !important;
 }
 .text-fl-muted {
